--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "start": "nodemon src/app.js",
+    "start-server": "node src/app.js"
   },
   "author": "",
   "license": "ISC",
