more super hacky stuff.. adding redis persistence and local file saving of pages so that (in the future) I can get around these annoying 429's, whenever my IP gets unlocked.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,11 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./app:/app
+      - ./app:/usr/app
     links:
       - "redis"
-    command: "npm run start-server"
+        #command: "npm run start-server"
+    command: "npm start"
   redis:
 #    build: ./redis
     image: "redis:alpine"
