--- a/app/package.json
+++ b/app/package.json
@@ -1,27 +1,33 @@
 {
   "name": "mtg-decklist-publisher",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Node TypeScript project to screen-scrape various MTG decklist sites",
+  "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.ts",
-    "start-server": "node src/app.ts"
+    "start": "nodemon dist/app.js",
+    "start-server": "node dist/app.js"
   },
-  "author": "",
+  "author": "Adam Myers",
   "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.16.1",
-    "nodemon": "^1.18.11"
-  },
   "dependencies": {
+    "bluebird": "^3.5.5",
     "body-parser": "^1.18.3",
-    "cheerio": "^1.0.0-rc.3",
-    "cheerio-tableparser": "^1.0.1",
     "express": "^4.16.4",
     "jsdom": "^14.0.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
+  },
+  "devDependencies": {
+    "@types/bluebird": "^3.5.27",
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.1",
+    "@types/node": "^12.0.8",
+    "@types/redis": "^2.8.13",
+    "@types/request-promise": "^4.1.44",
+    "nodemon": "^1.18.11",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2"
   }
 }
