--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "description": "Node TypeScript project to screen-scrape various MTG decklist sites",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --forceExit --coverage --verbose",
+    "watch-test": "npm run test -- --watchAll",
     "start": "nodemon dist/app.js",
     "start-server": "node dist/app.js"
   },
@@ -21,12 +22,16 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
+    "@types/bluebird-global": "^3.5.12",
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
+    "@types/jest": "^24.0.15",
     "@types/node": "^12.0.8",
     "@types/redis": "^2.8.13",
     "@types/request-promise": "^4.1.44",
+    "jest": "^24.8.0",
     "nodemon": "^1.18.11",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   }
