--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/rx": "^4.1.1",
+    "axios": "^0.19.0",
+    "axios-observable": "^1.1.1",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
