--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,23 @@ services:
     sysctls:
       net.core.somaxconn: '511'
     entrypoint: 'redis-server --appendonly yes'
-#    command: 'chown -R 999:999 /data/redis'
+
+# TODO  https://github.com/wurstmeister/kafka-docker
+#  zookeeper:
+#    image: wurstmeister/zookeeper
+#    ports:
+#      - "2181:2181"
+#  kafka:
+#    image: wurstmeister/kafka
+#    ports:
+#      - "9092:9092"
+#    environment:
+#      KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
+#      KAFKA_CREATE_TOPICS: "test:1:1"
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
 #    volumes:
-#volumes:
-#  data:
+#      - /var/run/docker.sock:/var/run/docker.sock
+##    command: 'chown -R 999:999 /data/redis'
+##    volumes:
+##volumes:
+##  data:
